Blogger gold integration + analytics events + translations

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1426,4 +1426,42 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_ended_ago">লাইভ %1$s মিনিট আগে শেষ হয়েছে </string>
   <string name="live_started_ago">লাইভ %1$s মিনিট আগে শুরু  হয়েছে</string>
   <string name="live_watching_count">%1$d জন লাইভ সেশন দেখছেন </string>
+  <string name="blogger_gold">Blogger Gold</string>
+  <string name="my_dashboard">My Dashboard</string>
+  <string name="start_creating_text">আমরা দেখতে পাচ্ছি যে আপনি এখনও অবধি কিছু ক্রিয়েট করেননি</string>
+  <string name="start_creating_btn">ক্রিয়েট করা শুরু করুন </string>
+  <string name="leaderboard_text">লিডারবোর্ড দেখার জন্য নিচে ক্লিক করুন </string>
+  <string name="leaderboard_btn">View Leaderboard</string>
+  <string name="total_blog_view">Total Blog views</string>
+  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard_blogs">BLOGS</string>
+  <string name="leaderboard_vlogs">VLOG</string>
+  <string name="webview_hack_text">আপনার ব্লগস আর ভিলগস কিভাবে পাবে অর্গানিক ট্রাফিক,তার টিপস:</string>
+  <string name="webview_term_text">নিয়ম ও শর্তাবলী </string>
+  <string name="earning_calculator">Earning Calculator</string>
+  <string name="click_here_btn">Click to view leaderboard</string>
+  <string name="checkout_growth_hack">Checkout the growth hacks</string>
+  <string name="blogger_gold_about_text">মমস্প্রেসোর দশ বছর পূর্তির মহোৎসবকে আমরা আরো বিশেষভাবে আপনাদের সাথে উদযাপন করতে চাই, যাতে থাকবে প্রাপ্তির আনন্দ !! আনন্দ সংবাদ,তাই না !! আমাদের জন্মদিনের এই পুরো মাসব্যাপী রয়েছে আপনাদের জন্য ৫লক্ষ টাকা অবধি জেতার সুযোগ!! আপনারা সকলেই যোগ দিয়ে জয়ী হতে পারেন আর তার জন্য যে জিনিসটি আপনাদের করতে হবে তা হলো, ক্রিয়েট করুন,শেয়ার করুন আর উপার্জন করুন অর্থাৎ (Create. Share. Earn).        </string>
+  <string name="webview_know_more">অধিক জানার জন্য</string>
+  <string name="leaderboard_faq">সাধারণ প্রশ্ন ও উত্তরাবলী </string>
+  <string name="click_below_btn">লিডারবোর্ড দেখার জন্য নিচে ক্লিক করুন</string>
+  <string name="rank_up">শুভেচ্ছা!! আপনি গতকালের থেকে %1$d পজিশন উপরে উঠেছেন </string>
+  <string name="rank_down">আপনি গতকালের থেকে %1$d পজিশন নিচে নেমে গেছেন!! ক্রিয়েট আর শেয়ার করুন যাতে আপনার পজিশন উপরে ওঠে।</string>
+  <string name="rank_same"> ক্রিয়েট আর শেয়ার করুন যাতে আপনার পজিশন আরো ভালো হয়।</string>
+  <string name="lang_sel_express_yourself">১০-টি পৃথক ভাষায় মনের কথা বলুন!</string>
+  <string name="select_language">ভাষা বাছুন</string>
+  <string name="login_or_sign_up">লগ ইন অথবা সাইন আপ</string>
+  <string name="login_subheading">লিখুন, পড়ুন, আয় করুন ও যোগ দিন ৩২মিলিয়ন মায়েদের সাথে</string>
+  <string name="welcome_user">নমস্কার, %1$s</string>
+  <string name="home_onboarding_consume">পড়ুন ৫-লাখের বেশি ব্লগ পড়ুন ও গল্প বা দেখুন ভিডিও</string>
+  <string name="home_onboarding_create">ভাবপ্রকাশ করুন ব্লগ, গল্প অথবা ভিডিওর মাধ্যমে</string>
+  <string name="home_onboarding_mymoney">যোগ দিন এবং আয় করুন মাই মানি ক্যাম্পেন থেকে</string>
+  <string name="home_onboarding_groups">সাহায্য চান বা করুন সাপোর্ট গ্ৰুপের মাধ্যমে</string>
+  <string name="all_create">ক্রিয়েট</string>
+  <string name="all_read">পড়ুন</string>
+  <string name="all_earn">আয় করুন</string>
+  <string name="all_join">যোগ দিন</string>
+  <string name="explore_self">আমি নিজেই আবিষ্কার করব</string>
+  <string name="home_onboarding_title">আপনি কী ভাবে শুরু করতে চান?</string>
 </resources>
