--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1533,4 +1533,42 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_ended_ago">%1$s મિનિટ પહેલા સમાપ્ત થયું છે.</string>
   <string name="live_started_ago">%1$s મિનિટ પહેલા શરૂ થયું છે.</string>
   <string name="live_watching_count">%1$d લોકો લાઈવ જોઈ રહ્યા છે. </string>
+  <string name="blogger_gold">Blogger Gold</string>
+  <string name="my_dashboard">My Dashboard</string>
+  <string name="start_creating_text">લાગે છે તમે કઈ યોગદાન નથી કર્યો </string>
+  <string name="start_creating_btn">રચવાની શરૂઆત કરો </string>
+  <string name="leaderboard_text">લિડર બોર્ડ જોવા નીચે ક્લિક કરો </string>
+  <string name="leaderboard_btn">View Leaderboard</string>
+  <string name="total_blog_view">Total Blog views</string>
+  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard_blogs">BLOGS</string>
+  <string name="leaderboard_vlogs">VLOG</string>
+  <string name="webview_hack_text">લાગે છે તમે કઈ યોગદાન નથી કર્યો </string>
+  <string name="webview_term_text"> નિયમો અને શરતો </string>
+  <string name="earning_calculator">Earning Calculator</string>
+  <string name="click_here_btn">Click to view leaderboard</string>
+  <string name="checkout_growth_hack">Checkout the growth hacks</string>
+  <string name="blogger_gold_about_text">મોમસ્પ્રેસો ૧૦ વર્ષ પૂરા કરે છે! આ એક અદભુત સફર રહી છે અને અમે આ ખાસ દિવસ ને યાદગાર બનાવવા તત્પર છીએ. ઉત્સાહિત છો? હોવું પણ જોઈએ! આ જન્મદિવસ ના જલસા ના ઉપલક્ષમાં ૫ લાખ ની રકમ રાહ જોઈ રહી છે અમારા માનવવંત બ્લોગરો અને વી લોગરો ની! હા, આપ સૌ હકદાર છો વિજેતા ઘોષિત થવાના, અને આના માટે તમારે ફક્ત રચવાનું છે, શેર કરવાનું છે અને કમાણી આપોઆપ થશે. </string>
+  <string name="webview_know_more">વધુ જાણો</string>
+  <string name="leaderboard_faq">વારંવાર પૂછાતા પ્રશ્નો </string>
+  <string name="click_below_btn">લિડર બોર્ડ જોવા નીચે ક્લિક કરો </string>
+  <string name="rank_up">વાહ! તમે ગઈકાલ થી %1$d સ્થાન આગળ છો </string>
+  <string name="rank_down">તમે %1$d સ્થાન નીચે પટકાયા! તમારું આગવું સ્થાન મેળવવા વધુ રચો અને શેર કરો!</string>
+  <string name="rank_same">તમારું સ્થાન સુધારવા વધુ રચો અને શેર કરો!</string>
+  <string name="lang_sel_express_yourself">પોતાની જાત ને ૧૦ ભાષાઓ માં વ્યક્ત કરો </string>
+  <string name="select_language">ભાષા પસંદ કરો </string>
+  <string name="login_or_sign_up">લોગીન અથવા સાઇન અપ </string>
+  <string name="login_subheading">વાંચો, રચો અને કમાણી કરતાં, ૩૨૦ લાખ માતાઓ સાથે જોડાઓ </string>
+  <string name="welcome_user">કેમ છો %1$s</string>
+  <string name="home_onboarding_consume">વાંચો ૫ લાખ જેટલા બ્લોગ અને વાર્તાઓ અને જુઓ વિડીયો</string>
+  <string name="home_onboarding_create">બ્લોગ્સ, વાર્તાઓ અથવા વિડીયો મારફતે પોતાની જાતને વ્યક્ત કરો</string>
+  <string name="home_onboarding_mymoney">માય મની કેમ્પેન માં જોડાઓ અને કમાણી કરો </string>
+  <string name="home_onboarding_groups">મદદનીશ સમૂહ દ્વારા મદદ ની આપ લે કરો </string>
+  <string name="all_create">રચો </string>
+  <string name="all_read">વાંચો </string>
+  <string name="all_earn">કમાણી કરો </string>
+  <string name="all_join">જોડાઓ </string>
+  <string name="explore_self">હું મારી રીતે શોધી લઇશ </string>
+  <string name="home_onboarding_title">તમે તમારી સફર કેવી રીતે શરૂ કરવા ઈચ્છો છો?</string>
 </resources>
