--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1442,4 +1442,42 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_ended_ago">लाइव %1$s मिनट पहले समाप्त हुआ है</string>
   <string name="live_started_ago">लाइव %1$s मिनट पहले शुरू हुआ है</string>
   <string name="live_watching_count">%1$d लोग देख रहे हैं</string>
+  <string name="blogger_gold">Blogger Gold</string>
+  <string name="my_dashboard">My Dashboard</string>
+  <string name="start_creating_text">ऐसा लगता है कि आपने कुछ भी क्रिएट नहीं किया है</string>
+  <string name="start_creating_btn">क्रिएट करें</string>
+  <string name="leaderboard_text">लीडरबोर्ड देखने के लिए नीचे क्लिक करें</string>
+  <string name="leaderboard_btn">View Leaderboard</string>
+  <string name="total_blog_view">Total Blog views</string>
+  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard_blogs">BLOGS</string>
+  <string name="leaderboard_vlogs">VLOG</string>
+  <string name="webview_hack_text">अपने ब्लॉग और वी लॉग्स के लिए ऑर्गेनिक ट्रैफ़िक प्राप्त करने के तरीके :</string>
+  <string name="webview_term_text">नियम और शर्तें</string>
+  <string name="earning_calculator">Earning Calculator</string>
+  <string name="click_here_btn">Click to view leaderboard</string>
+  <string name="checkout_growth_hack">Checkout the growth hacks</string>
+  <string name="blogger_gold_about_text">मॉम्सप्रेस्सो 10 साल का हो गया है! यह सफ़र एक अद्भुत सफ़र रहा है और हम इस विशेष दिन को मनाने के लिए कुछ बड़ा और अनोखा करना चाहते थे. आप भी उत्साहित हैं न ? होना भी चाहिए क्योंकि हमारे10th बर्थडे बोनांजा के मासिक उत्सव के अवसर पर आप हो सकते हैं 5 लाख रुपयों तक के हकदार !!</string>
+  <string name="webview_know_more">अधिक जानिए</string>
+  <string name="leaderboard_faq">पूछे जाने वाले प्रश्न</string>
+  <string name="click_below_btn">लीडरबोर्ड देखने के लिए नीचे क्लिक करें</string>
+  <string name="rank_up">वाह! आप कल से %1$d पोजीशन ऊपर हैं</string>
+  <string name="rank_down">आप %1$d पोजीशन से नीचे आ गए हैं ! अपनी पोजीशन सुधारने के लिए क्रिएट करें और शेयर करें!</string>
+  <string name="rank_same">अपनी पोजीशन सुधारने के लिए क्रिएट करें और शेयर करें!</string>
+  <string name="lang_sel_express_yourself">10 भाषाओं में खुद को व्यक्त करें</string>
+  <string name="select_language">भाषा चुनें</string>
+  <string name="login_or_sign_up">लॉग इन या साइन अप करें</string>
+  <string name="login_subheading">क्रिएट, पढ़ें, और 32 मिलियन मॉम्ससे जुड़ें</string>
+  <string name="welcome_user">नमस्कार %1$s,</string>
+  <string name="home_onboarding_consume">5 लाख  से अधिक ब्लॉग और कहानियों में से पढ़ें या वीडियो देखें</string>
+  <string name="home_onboarding_create">अपने आप को ब्लॉग, कहानियों या वीडियो बनाएँ के माध्यम से व्यक्त करें</string>
+  <string name="home_onboarding_mymoney">MyMoney कैम्पेंस में हिस्सा लें  और कमाएँ</string>
+  <string name="home_onboarding_groups">सपोर्ट ग्रुप्स के माध्यम से  सहायता दें और दें</string>
+  <string name="all_create">क्रिएट </string>
+  <string name="all_read">पढ़ें </string>
+  <string name="all_earn">कमाएँ</string>
+  <string name="all_join">ज्वाइन करें </string>
+  <string name="explore_self">मैं खुद  तलाश करूँगी</string>
+  <string name="home_onboarding_title">आप अपनी यात्रा कैसे शुरू करना चाहते हैं?</string>
 </resources>
