--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1461,4 +1461,42 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_ended_ago">Live ended %1$s ago</string>
   <string name="live_started_ago">Started %1$s ago</string>
   <string name="live_watching_count">%1$d watching</string>
+  <string name="blogger_gold">Blogger Gold</string>
+  <string name="my_dashboard">My Dashboard</string>
+  <string name="start_creating_text">ನೀವಿನ್ನೂ ರಚಿಸಿದಂತೆ ಕಂಡುಬರುತ್ತಿಲ್ಲ</string>
+  <string name="start_creating_btn">ರಚಿಸಲು ಪ್ರಾರಂಭಿಸಿ</string>
+  <string name="leaderboard_text">ಲೀಡರ್ ಬೋರ್ಡ್ ನೋಡಲು ಇಲ್ಲಿ ಕ್ಲಿಕ್ ಮಾಡಿ</string>
+  <string name="leaderboard_btn">View Leaderboard</string>
+  <string name="total_blog_view">Total Blog views</string>
+  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard_blogs">BLOGS</string>
+  <string name="leaderboard_vlogs">VLOG</string>
+  <string name="webview_hack_text">ಹೆಚ್ಚು ಪೇಜ್ ವ್ಯೂ ಗಳಿಸಲು ಈ ಹ್ಯಾಕ್ ಗಳನ್ನು ಓದಿ</string>
+  <string name="webview_term_text">नನಿಯಮಾವಳಿಗಳು</string>
+  <string name="earning_calculator">Earning Calculator</string>
+  <string name="click_here_btn">Click to view leaderboard</string>
+  <string name="checkout_growth_hack">Checkout the growth hacks</string>
+  <string name="blogger_gold_about_text">ಮಾಮ್ಸ್ ಪ್ರೆಸೊ ವೇದಿಕೆಗೆ ಹತ್ತು ವರ್ಷಗಳು ತುಂಬಿವೆ. ಇದೊಂದು ಅದ್ಭುತವಾದ ಪಯಣ. ಅದಕ್ಕಾಗಿ ಈ ವಿಶೇಷ ದಿನವನ್ನು ವಿಶಿಷ್ಟವಾಗಿ ಆಚರಿಸಲು ಏನಾದರೂ ವಿಶೇಷವನ್ನೇ ಮಾಡಬೇಕೆಂಬುದು ನಮ್ಮ ಆಸೆಯಾಗಿತ್ತು. ಕುತೂಹಲ ಹೆಚ್ಚುತ್ತಿದೆಯಾ? ಹೆಚ್ಚಲೇಬೇಕು. ಏಕೆಂದರೆ ನಮ್ಮ ಹುಟ್ಟುಹಬ್ಬದ ತಿಂಗಳನ್ನು ಸಂಭ್ರಮಿಸಲು 5 ಲಕ್ಷ ಮೊತ್ತವನ್ನು ನಿಮ್ಮೆಲ್ಲರಿಗಾಗಿ ಮೀಸಲಿಟ್ಟಿದ್ದೇವೆ. ಈ ಹಣವನ್ನು ನೀವೂ ಗೆಲ್ಲಬಹುದು. ಮಾಡಬೇಕಾಗಿರುವುದು ಇಷ್ಟೇ!! ಬರಹವನ್ನು ರಚಿಸಿ, ಹಂಚಿಕೊಳ್ಳಿ ಮತ್ತು ಗೆಲ್ಲಿರಿ.</string>
+  <string name="webview_know_more">ಇನ್ನು ಹೆಚ್ಚು ತಿಳಿಯಿರಿ</string>
+  <string name="leaderboard_faq">ಹೆಚ್ಚು ಕೇಳಲ್ಪಟ್ಟ ಪ್ರಶ್ನೆಗಳು</string>
+  <string name="click_below_btn">ಲೀಡರ್ ಬೋರ್ಡ್ ನೋಡಲು ಇಲ್ಲಿ ಕ್ಲಿಕ್ ಮಾಡಿ</string>
+  <string name="rank_up">ಎಸ್.. ನೀವು %1$d ನಿನ್ನೆಗಿಂತ ಮೇಲಿನ ಸ್ಥಾನಕ್ಕೇರಿದ್ದೀರಿ</string>
+  <string name="rank_down">ನೀವು ರಚಿಸಿದ್ದು %1$d ಸ್ಥಾನ! ರಚಿಸಿ. ಹಂಚಿರಿ. ಮತ್ತು ನಿಮ್ಮ ಸ್ಥಾನವನ್ನು ಮೇಲ್ದರ್ಜೆಗೆ ಏರಿಸಿ</string>
+  <string name="rank_same">ರಚಿಸಿ ಮತ್ತು ಹಂಚಿರಿ..ನಿಮ್ಮ ಸ್ಥಾನವನ್ನು ಮೇಲ್ದರ್ಜೆಗೆ ಏರಿಸಿ</string>
+  <string name="lang_sel_express_yourself">10 ಭಾಷೆಗಳಲ್ಲಿ ನಿಮ್ಮ ಭಾವನೆಗಳನ್ನು ವ್ಯಕ್ತಪಡಿಸಬಹುದು</string>
+  <string name="select_language">ನಿಮ್ಮ ಭಾಷೆಯನ್ನು ಆಯ್ಕೆ ಮಾಡಿ</string>
+  <string name="login_or_sign_up">ಲಾಗ್ ಇನ್ / ಸೈನ್ ಅಪ್</string>
+  <string name="login_subheading">ರಚಿಸಿ,ಓದಿ, ಗಳಿಸಿ, 3 ಕೋಟಿ, 20 ಲಕ್ಷ ತಾಯಂದಿರ ಜೊತೆ ನೀವೂ ಸೇರಿಕೊಳ್ಳಿ</string>
+  <string name="welcome_user">ನಮಸ್ತೆ %1$s</string>
+  <string name="home_onboarding_consume">5 ಲಕ್ಷಕ್ಕೂ ಅಧಿಕ ಬ್ಲಾಗ್ ಮತ್ತು ಕಥೆಗಳನ್ನು ಓದಬಹುದು, ಮತ್ತು ವೀಡಿಯೋಗಳನ್ನು ನೋಡಿ</string>
+  <string name="home_onboarding_create">ನಿಮ್ಮನ್ನು ನೀವು ಬರವಣಿಗೆಯ ಮೂಲಕ ಮತ್ತು ವೀಡಿಯೋ ಮೂಲಕ ತೊಡಗಿಸಿಕೊಳ್ಳಿ</string>
+  <string name="home_onboarding_mymoney">ಮೈ ಮನಿ ಪ್ರಚಾರದಲ್ಲಿ ಭಾಗಿಯಾಗಿ ಹಣವನ್ನು ಸಂಪಾದಿಸಿ</string>
+  <string name="home_onboarding_groups">ಸಹಾಯ ತಂಡದಿಂದ ಸಹಾಯ ಪಡೆದುಕೊಳ್ಳಿ</string>
+  <string name="all_create">ರಚಿಸಿ</string>
+  <string name="all_read">ಓದಿ</string>
+  <string name="all_earn">ಗಳಿಸಿ</string>
+  <string name="all_join">ಸೇರಿಕೊಳ್ಳಿ</string>
+  <string name="explore_self">ನನ್ನನ್ನು ನಾನು ವ್ಯಕ್ತಪಡಿಸುತ್ತೇನೆ</string>
+  <string name="home_onboarding_title">ಹೇಗಿದ್ದೀರಾ?ನಿಮ್ಮ ಪ್ರಯಾಣವನ್ನು ಪ್ರಾರಂಭಿಸಲು ಬಯಸುತ್ತೀರಾ?</string>
 </resources>
