--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1465,4 +1465,42 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_ended_ago">%1$s മിനിറ്റ് മുൻപ് അവസാനിച്ചു </string>
   <string name="live_started_ago">%1$s മിനിറ്റ് മുൻപ് തുടങ്ങി </string>
   <string name="live_watching_count">%1$d പേർ കാണുന്നു </string>
+  <string name="blogger_gold">Blogger Gold</string>
+  <string name="my_dashboard">My Dashboard</string>
+  <string name="start_creating_text">നിങ്ങൾ ഒന്നും സൃഷ്ടിച്ചിട്ടില്ലെന്ന് തോന്നുന്നു</string>
+  <string name="start_creating_btn">സൃഷ്ടിക്കാൻ ആരംഭിക്കുക</string>
+  <string name="leaderboard_text">ലീഡർബോർഡുകൾ കാണുന്നതിന് ചുവടെ ക്ലിക്കുചെയ്യുക</string>
+  <string name="leaderboard_btn">View Leaderboard</string>
+  <string name="total_blog_view">Total Blog views</string>
+  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard_blogs">BLOGS</string>
+  <string name="leaderboard_vlogs">VLOG</string>
+  <string name="webview_hack_text">നിങ്ങളുടെ ബ്ലോഗുകളിലേക്കും വ്ലോഗുകളിലേക്കും ഓർഗാനിക് ട്രാഫിക് ലഭിക്കുന്നതിനുള്ള ഉപായങ്ങൾ:</string>
+  <string name="webview_term_text">ഉപാധികളും നിബന്ധനകളും</string>
+  <string name="earning_calculator">Earning Calculator</string>
+  <string name="click_here_btn">Click to view leaderboard</string>
+  <string name="checkout_growth_hack">Checkout the growth hacks</string>
+  <string name="blogger_gold_about_text">മോംസ്പ്രെസ്സോയ്ക്ക് 10 വയസ് തികയുന്നു. ഈ വലിയ നേട്ടത്തിന് വലിയ ആഘോഷം തന്നെ വേണമല്ലോ? ആവേശകരമായ ഒരു മത്സരമാണ് പത്താം ബർത്ത്ഡേ ബൊണാൻസയുടെ ഭാഗമായി ഞങ്ങൾ ഒരുക്കിയിരിക്കുന്നത് - 5 ലക്ഷം രൂപയുടെ സമ്മാനങ്ങൾ നിങ്ങൾക്കായി മാത്രം!</string>
+  <string name="webview_know_more">കൂടുതൽ അറിയുക</string>
+  <string name="leaderboard_faq">പതിവുചോദ്യങ്ങൾ</string>
+  <string name="click_below_btn">ലീഡർബോർഡുകൾ കാണുന്നതിന് ചുവടെ ക്ലിക്കുചെയ്യുക</string>
+  <string name="rank_up">കൊള്ളാം! ഇന്നലെ മുതൽ നിങ്ങളുടെ സ്ഥാനം %1$d ആണ്.</string>
+  <string name="rank_down">നിങ്ങൾ %1$d സ്ഥാനങ്ങൾ താഴേക്ക് പോന്നിരിക്കുന്നു! നിങ്ങളുടെ സ്ഥാനം മെച്ചപ്പെടുത്തുന്നതിന് കൂടുതൽ സൃഷ്ടിക്കുകയും പങ്കിടുകയും ചെയ്യുക!</string>
+  <string name="rank_same">നിങ്ങളുടെ സ്ഥാനം മെച്ചപ്പെടുത്തുന്നതിന് സൃഷ്ടിക്കുകയും പങ്കിടുകയും ചെയ്യുക!</string>
+  <string name="lang_sel_express_yourself">10 ഭാഷകളിൽ ആശയാവിഷ്കാരം നടത്തുക </string>
+  <string name="select_language">ഭാഷ തിരഞ്ഞെടുക്കുക</string>
+  <string name="login_or_sign_up">ലോഗിൻ ചെയ്യുക അല്ലെങ്കിൽ സൈൻ അപ്പ് ചെയ്യുക</string>
+  <string name="login_subheading">സൃഷ്ടിക്കുക, വായിക്കുക, സമ്പാദിക്കുക, 32 ദശലക്ഷം അമ്മമാരോടൊപ്പം ചേരുക</string>
+  <string name="welcome_user">പ്രിയപ്പെട്ട %1$s,</string>
+  <string name="home_onboarding_consume">5 ലക്ഷത്തിലധികം ബ്ലോഗുകളിൽ നിന്നും കഥകളിൽ നിന്നും ഇഷ്ടമുള്ളവ തിരഞ്ഞെടുത്ത് വായിക്കുക അല്ലെങ്കിൽ വീഡിയോകൾ കാണുക</string>
+  <string name="home_onboarding_create">ബ്ലോഗുകൾ,കഥകൾ അല്ലെങ്കിൽ വീഡിയോകൾ വഴി ആശയാവിഷ്കാരം നടത്തുക.</string>
+  <string name="home_onboarding_mymoney">മൈമണി കാമ്പെയ്‌നുകളിൽ പങ്കെടുത്ത് സമ്പാദിക്കുക</string>
+  <string name="home_onboarding_groups">സപ്പോർട്ട്  ഗ്രൂപ്പുകളിലൂടെ പിന്തുണ നൽകുകയും അന്വേഷിക്കുകയും ചെയ്യുക</string>
+  <string name="all_create">സൃഷ്ടിക്കുക </string>
+  <string name="all_read">വായിക്കുക </string>
+  <string name="all_earn">സമ്പാദിക്കുക </string>
+  <string name="all_join">ചേരുക </string>
+  <string name="explore_self">ഞാൻ സ്വന്തമായിഅന്വേഷിച്ചു കണ്ടെത്താം </string>
+  <string name="home_onboarding_title">നിങ്ങളുടെ യാത്ര എങ്ങനെ ആരംഭിക്കാനാണ് ആഗ്രഹിക്കുന്നത്?</string>
 </resources>
