--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -1419,4 +1419,42 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_ended_ago">%1$s मिनिटापूर्वी लाईव्ह सेशन संपले आहे</string>
   <string name="live_started_ago">%1$s मिनिटापूर्वी सुरु झाले</string>
   <string name="live_watching_count">%1$d लोक बघत आहेत.</string>
+  <string name="blogger_gold">Blogger Gold</string>
+  <string name="my_dashboard">My Dashboard</string>
+  <string name="start_creating_text">असे दिसते की तुम्ही काहीच  तयार केले नाही</string>
+  <string name="start_creating_btn">तयार करण्यास  प्रारंभ करा</string>
+  <string name="leaderboard_text">लीडरबोर्ड पाहण्यासाठी खाली क्लिक करा</string>
+  <string name="leaderboard_btn">View Leaderboard</string>
+  <string name="total_blog_view">Total Blog views</string>
+  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard_blogs">BLOGS</string>
+  <string name="leaderboard_vlogs">VLOG</string>
+  <string name="webview_hack_text">ब्लॉग आणि व्हिलॉग जास्ती जास्त लोकांपर्यत पोहचण्यासाठीचे उपाय.</string>
+  <string name="webview_term_text">नियम आणि अटी</string>
+  <string name="earning_calculator">Earning Calculator</string>
+  <string name="click_here_btn">Click to view leaderboard</string>
+  <string name="checkout_growth_hack">Checkout the growth hacks</string>
+  <string name="blogger_gold_about_text">मॉम्सप्रेसो ला१० वर्ष पूर्ण झाली! हा एक अविश्वसनीय प्रवास आहे आणि आम्हाला हा खास दिवस साजरा करण्यासाठी काहीतरी खूप मोठं करण्याची इच्छा होती. तुमचा उत्साह नक्कीच वाढला असेल ना? वाढलाच असेल ! आमच्या वाढदिवसाच्या महिन्यासाठी, 5 लाख रुपये बक्षिसांची लयलूट होणार आहे आणि आपण सर्वजण जिंकण्यासाठी पात्र आहात!</string>
+  <string name="webview_know_more">अधिक जाणून घ्या</string>
+  <string name="leaderboard_faq">सर्वाधिक विचारले जाणारे  प्रश्न</string>
+  <string name="click_below_btn">लीडरबोर्ड पाहण्यासाठी खाली क्लिक करा</string>
+  <string name="rank_up">वा! तुम्ही काल पासून %1$d या क्रमवारी मध्ये आहात. </string>
+  <string name="rank_down">तुमची क्रमवारी %1$d ने खाली आली आहे. यासाठी तयार करा, शेअर करा! </string>
+  <string name="rank_same">तुमची क्रमवारी वाढवण्यासाठी  तयार करा, शेअर करा!</string>
+  <string name="lang_sel_express_yourself">स्वत: ला 10 भाषांमध्ये व्यक्त करु शकता</string>
+  <string name="select_language">भाषा निवडा</string>
+  <string name="login_or_sign_up">लॉगिन किंवा साइन अप करा</string>
+  <string name="login_subheading">तयार करा, वाचा, कमवा आणि सामील व्हा  32 दशलक्ष मॉम्स सोबत</string>
+  <string name="welcome_user">नमस्कार %1$s,</string>
+  <string name="home_onboarding_consume">5 लाखाहून अधिक ब्लॉग व कथा किंवा व्हिडिओ पहा.</string>
+  <string name="home_onboarding_create">ब्लॉग, कथा किंवा व्हिडिओंद्वारे स्वतःला व्यक्त करा</string>
+  <string name="home_onboarding_mymoney">सहभागी व्हा आणि मायमनीद्वारे कमवा</string>
+  <string name="home_onboarding_groups">सपोर्ट  गटांद्वारे मदत  द्या आणि घ्या</string>
+  <string name="all_create">तयार करा</string>
+  <string name="all_read">वाचा</string>
+  <string name="all_earn">कमवा</string>
+  <string name="all_join">सामील व्हा</string>
+  <string name="explore_self">मी स्वतःहून शोध घेईन</string>
+  <string name="home_onboarding_title">आपण आपली यात्रा कशी सुरू करू इच्छिता?</string>
 </resources>
