--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -1421,4 +1421,42 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_ended_ago">%1$s నిముషాల ముందే లైవ్ ముగిసింది </string>
   <string name="live_started_ago">ఈ లైవ్ %1$s నిముషాల ముందే మొదలైంది</string>
   <string name="live_watching_count">%1$d మంది ఈ లైవ్ చూస్తున్నారు </string>
+  <string name="blogger_gold">Blogger Gold</string>
+  <string name="my_dashboard">My Dashboard</string>
+  <string name="start_creating_text">మీరు ఏమీ క్రియేట్ చేయలేదని తెలుస్తోంది</string>
+  <string name="start_creating_btn">క్రియేట్ చేయడం ప్రారంభించండి</string>
+  <string name="leaderboard_text">లీడర్‌బోర్డ్‌లను వీక్షించడానికి క్రింద క్లిక్ చేయండి</string>
+  <string name="leaderboard_btn">View Leaderboard</string>
+  <string name="total_blog_view">Total Blog views</string>
+  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard_blogs">BLOGS</string>
+  <string name="leaderboard_vlogs">VLOG</string>
+  <string name="webview_hack_text">మీ బ్లాగులు &amp; వ్లాగ్‌లకు ఆర్గానిక్ వ్యూస్ పొందడానికి చిట్కాలు:</string>
+  <string name="webview_term_text">నిబంధనలు మరియు షరతులు</string>
+  <string name="earning_calculator">Earning Calculator</string>
+  <string name="click_here_btn">Click to view leaderboard</string>
+  <string name="checkout_growth_hack">Checkout the growth hacks</string>
+  <string name="blogger_gold_about_text">మామ్స్‌ప్రెస్సోకి పదేళ్లు! ఇది నమ్మశక్యం కాని ప్రయాణం, ఈ ప్రత్యేకమైన  రోజు జ్ఞాపకాల్ని గొప్పగా రూపొందించాలనుకుంటున్నాము. ఉత్సాహంగా ఉందా? అదే కోరుకుంటున్నాము! మా 10th బర్త్‌డే బొనాంజా నెలలో, 5 లక్షల దాకా మీ అందరికీ గెలవడానికి అర్హత ఉంది!</string>
+  <string name="webview_know_more">మరింత తెలుసుకోండి</string>
+  <string name="leaderboard_faq">తరచుగా అడిగే ప్రశ్నలు</string>
+  <string name="click_below_btn">లీడర్‌బోర్డ్‌లను వీక్షించడానికి క్రింద క్లిక్ చేయండి</string>
+  <string name="rank_up">అవును! మీరు నిన్నటి నుండి %1$d స్థానం కంటే పైన ఉన్నారు </string>
+  <string name="rank_down">మీరు %1$d స్థానాలకు కింద ఉన్నారు! మీ స్థానాన్ని మెరుగుపరచడానికి క్రియేట్ చేసి షేర్ చేయండి!</string>
+  <string name="rank_same">మీ స్థానాన్ని మెరుగుపరచడానికి క్రియేట్ చేసి షేర్ చేయండి!</string>
+  <string name="lang_sel_express_yourself">మీరు 10 భాషలలో మిమ్మల్ని మీరు వ్యక్తపరచవచ్చు </string>
+  <string name="select_language">భాషను ఎంచుకోండి</string>
+  <string name="login_or_sign_up">లాగిన్ అవ్వండి లేదా సైన్ అప్ చేయండి</string>
+  <string name="login_subheading">క్రియేట్, చదవండి  సంపాదించండి. 32 మిలియన్ తల్లుల వేదికలో చేరండి.</string>
+  <string name="welcome_user">హాయ్ %1$s,</string>
+  <string name="home_onboarding_consume">5 లక్షల కంటే ఎక్కువ బ్లాగులు &amp; కథలు చదవండి లేదా వీడియోలు చూడండి</string>
+  <string name="home_onboarding_create">బ్లాగులు, కథలు లేదా వీడియోల ద్వారా మిమ్మల్ని మీరు వ్యక్తపరచండి</string>
+  <string name="home_onboarding_mymoney">MyMoney ప్రచారాల ద్వారా పాల్గొనండి మరియు సంపాదించండి</string>
+  <string name="home_onboarding_groups">సపోర్ట్ గ్రూప్స్ ద్వారా సలహాలు ఇవ్వండి</string>
+  <string name="all_create">క్రియేట్</string>
+  <string name="all_read">చదవండి</string>
+  <string name="all_earn">సంపాదించండి</string>
+  <string name="all_join">జాయిన్ అవ్వండి </string>
+  <string name="explore_self">నేను నా స్వంతంగా అన్వేషిస్తాను</string>
+  <string name="home_onboarding_title">మీరు మీ ప్రయాణాన్ని ఎలా ప్రారంభించాలనుకుంటున్నారు?</string>
 </resources>
