--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1582,5 +1582,43 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_ended_ago">Live ended %1$s ago</string>
   <string name="live_started_ago">Started %1$s ago</string>
   <string name="live_watching_count">%1$d watching</string>
+  <string name="blogger_gold">Blogger Gold</string>
+  <string name="my_dashboard">My Dashboard</string>
+  <string name="start_creating_text">It seems you haven\'t created anything yet.</string>
+  <string name="start_creating_btn">Start Creating</string>
+  <string name="leaderboard_text">See who\'s leading the race!</string>
+  <string name="leaderboard_btn">View Leaderboard</string>
+  <string name="total_blog_view">Total Blog views</string>
+  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard_blogs">BLOGS</string>
+  <string name="leaderboard_vlogs">VLOG</string>
+  <string name="webview_hack_text">Hacks to get Organic Traffic to your blogs &amp; vlogs:</string>
+  <string name="webview_term_text">Terms and Conditions</string>
+  <string name="earning_calculator">Earning Calculator</string>
+  <string name="click_here_btn">Click to view leaderboard</string>
+  <string name="checkout_growth_hack">Checkout the growth hacks</string>
+  <string name="blogger_gold_about_text">Momspresso’s turning 10! It\'s been an incredible journey and we wanted to do something B-I-G to commemorate this special day. Excited? You should be! For our 10th Birthday Bonanza month, 5 Lakhs will be up for grabs, and all of you are entitled to win!</string>
+  <string name="webview_know_more">Know more</string>
+  <string name="leaderboard_faq">FAQs</string>
+  <string name="click_below_btn">Click below to view leaderboards</string>
+  <string name="rank_up">Yay! You are %1$d positions up from yesterday</string>
+  <string name="rank_down">You dropped %1$d places! Create and share to improve your position!</string>
+  <string name="rank_same">Create and share to improve your position!</string>
+  <string name="lang_sel_express_yourself">Express Yourself in 10 Languages</string>
+  <string name="select_language">Select Language</string>
+  <string name="login_or_sign_up">Login or Sign up</string>
+  <string name="login_subheading">Create, Read, Earn, and Join the 32 Million Mums</string>
+  <string name="welcome_user">Hi %1$s,</string>
+  <string name="home_onboarding_consume"><![CDATA[Read from over 5 Lac blogs & stories or watch videos]]></string>
+  <string name="home_onboarding_create">Express yourself through blogs, stories, or videos</string>
+  <string name="home_onboarding_mymoney">Participate and earn through MyMoney campaigns</string>
+  <string name="home_onboarding_groups">Give and seek support through Support Groups</string>
+  <string name="all_create">Create</string>
+  <string name="all_read">Read</string>
+  <string name="all_earn">Earn</string>
+  <string name="all_join">Join</string>
+  <string name="explore_self">I\'ll explore on my own</string>
+  <string name="home_onboarding_title">how do you wish to start your journey?</string>
 </resources>
 
