--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1482,4 +1482,42 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_ended_ago">ਲਾਈਵ %1$s ਮਿੰਟ ਪਹਿਲਾਂ ਸਮਾਪਤ ਹੋਇਆ</string>
   <string name="live_started_ago">ਲਾਈਵ %1$s ਮਿੰਟ ਪਹਿਲਾਂ ਸ਼ੁਰੂ ਹੋਇਆ</string>
   <string name="live_watching_count">%1$d ਲੋਕ ਦੇਖ ਰਹੇ ਹਨ</string>
+  <string name="blogger_gold">Blogger Gold</string>
+  <string name="my_dashboard">My Dashboard</string>
+  <string name="start_creating_text">ਅਜਿਹਾ ਲਗਦਾ ਹੈ ਕਿ ਤੁਸੀਂ ਕੁਝ ਨਹੀਂ ਬਣਾਇਆ</string>
+  <string name="start_creating_btn">ਬਣਾਉਣਾ ਸ਼ੁਰੂ ਕਰੋ</string>
+  <string name="leaderboard_text">ਲੀਡਰਬੋਰਡ ਦੇਖਣ ਲਈ ਹੇਠਾਂ ਕਲਿੱਕ ਕਰੋ</string>
+  <string name="leaderboard_btn">View Leaderboard</string>
+  <string name="total_blog_view">Total Blog views</string>
+  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard_blogs">BLOGS</string>
+  <string name="leaderboard_vlogs">VLOG</string>
+  <string name="webview_hack_text">ਅਜਿਹਾ ਲਗਦਾ ਹੈ ਕਿ ਤੁਸੀਂ ਕੁਝ ਨਹੀਂ ਬਣਾਇਆ</string>
+  <string name="webview_term_text">ਨਿਯਮ ਅਤੇ ਸ਼ਰਤਾਂ</string>
+  <string name="earning_calculator">Earning Calculator</string>
+  <string name="click_here_btn">Click to view leaderboard</string>
+  <string name="checkout_growth_hack">Checkout the growth hacks</string>
+  <string name="blogger_gold_about_text">ਮੌਮਸਪ੍ਰੈਸੋ ਦੇ 10 ਸਾਲ ਪੂਰੇ ਹੋ ਰਹੇ ਹਨ! ਇਹ ਇਕ ਸ਼ਾਨਦਾਰ ਯਾਤਰਾ ਰਹੀ ਹੈ ਅਤੇ ਇਸ ਵਿਸ਼ੇਸ਼ ਦਿਨ ਨੂੰ ਯਾਦਗਾਰੀ ਬਣਾਉਣ ਲਈ ਅਸੀਂ ਕੁਝ ਵੱਡਾ ਕਰਨਾ ਚਾਹੁੰਦੇ ਸੀ। ਤੁਸੀਂ ਵੀ ਉਤਸ਼ਾਹਿਤ ਹੋ ਗਏ ਨਾ ? ਤੁਹਾਨੂੰ ਹੋਣਾ ਵੀ ਚਾਹੀਦਾ ਹੈ! ਸਾਡੇ ਜਨਮਦਿਨ ਦੇ ਮਹੀਨੇ ਲਈ, 5 ਲੱਖ ਰੁਪਏ ਤੱਕ ਦੇ ਇਨਾਮ ਦਿੱਤੇ ਜਾਣਗੇ, ਅਤੇ ਤੁਸੀਂ ਸਾਰੇ ਇਸ ਇਨਾਮ ਨੂੰ ਜਿੱਤਣ ਦੇ ਹੱਕਦਾਰ ਹੋ!</string>
+  <string name="webview_know_more">ਹੋਰ ਜਾਣੋ</string>
+  <string name="leaderboard_faq">ਅਕਸਰ ਪੁੱਛੇ ਜਾਂਦੇ ਪ੍ਰਸ਼ਨ</string>
+  <string name="click_below_btn">ਲੀਡਰਬੋਰਡ ਦੇਖਣ ਲਈ ਹੇਠਾਂ ਕਲਿੱਕ ਕਰੋ</string>
+  <string name="rank_up">ਵਾਹ! ਤੁਸੀਂ ਕੱਲ੍ਹ ਨਾਲੋਂ %1$d ਪੁਜ਼ੀਸ਼ਨਾਂ ਅੱਗੇ ਹੋ</string>
+  <string name="rank_down">ਤੁਸੀਂ %1$d ਪੁਜ਼ੀਸ਼ਨਾਂ ਹੇਠਾਂ ਆ ਗਏ ! ਆਪਣੀ ਸਥਿਤੀ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ ਬਣਾਓ ਅਤੇ ਸ਼ੇਅਰ ਕਰੋ!</string>
+  <string name="rank_same">ਆਪਣੀ ਸਥਿਤੀ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ ਬਣਾਓ ਅਤੇ ਸ਼ੇਅਰ ਕਰੋ!</string>
+  <string name="lang_sel_express_yourself">ਆਪਣੇ ਆਪ ਨੂੰ 10 ਭਾਸ਼ਾਵਾਂ ਵਿਚ ਪ੍ਰਗਟ ਕਰੋ</string>
+  <string name="select_language">ਭਾਸ਼ਾ ਚੁਣੋ</string>
+  <string name="login_or_sign_up">ਲੋਗਇਨ ਕਰੋ ਜਾਂ ਸਾਈਨ ਅਪ ਕਰੋ</string>
+  <string name="login_subheading">ਬਣਾਓ, ਪੜ੍ਹੋ, ਕਮਾਓ ਅਤੇ 32 ਮਿਲੀਅਨ ਮਾਵਾਂ ਨਾਲ ਜੁੜੋ</string>
+  <string name="welcome_user">ਨਮਸਕਾਰ %1$s,</string>
+  <string name="home_onboarding_consume">5 ਲੱਖ ਤੋਂ ਵੱਧ ਬਲੌਗ ਅਤੇ ਕਹਾਣੀਆਂ ਪੜ੍ਹੋ ਜਾਂ ਵੀਡੀਓ ਵੇਖੋ</string>
+  <string name="home_onboarding_create">ਆਪਣੇ ਆਪ ਨੂੰ ਬਲੌਗਸ, ਕਹਾਣੀਆਂ ਜਾਂ ਵੀਡਿਓਜ਼ ਰਾਹੀਂ ਪ੍ਰਗਟ ਕਰੋ</string>
+  <string name="home_onboarding_mymoney">MyMoney ਕੈਂਪੇਨ ਚ ਭਾਗ ਲਓ ਅਤੇ ਕਮਾਈ ਕਰੋ</string>
+  <string name="home_onboarding_groups">ਸਪੋਰਟ ਗ੍ਰੁੱਪਸ ਦੁਆਰਾ ਸਹਾਇਤਾ ਦਿਓ ਅਤੇ ਪ੍ਰਾਪਤ ਕਰੋ</string>
+  <string name="all_create">ਬਣਾਓ</string>
+  <string name="all_read">ਪੜ੍ਹੋ</string>
+  <string name="all_earn">ਕਮਾਓ</string>
+  <string name="all_join">ਜੁੜੋ</string>
+  <string name="explore_self">ਮੈਂ ਆਪਣੇ ਆਪ ਐਕਸਪਲੋਰ ਕਰਾਂਗੀ</string>
+  <string name="home_onboarding_title">ਤੁਸੀਂ ਆਪਣੀ ਯਾਤਰਾ ਕਿਵੇਂ ਅਰੰਭ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ ?</string>
 </resources>
