--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1417,4 +1417,42 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="live_ended_ago">%1$s நிமிடத்திற்கு முன்பு முடிந்தது  </string>
   <string name="live_started_ago">%1$s நிமிடத்திற்கு முன்பு தொடங்கியது</string>
   <string name="live_watching_count">%1$d பேர் பார்த்துக் கொண்டிருக்கின்றனர்</string>
+  <string name="blogger_gold">Blogger Gold</string>
+  <string name="my_dashboard">My Dashboard</string>
+  <string name="start_creating_text">நீங்கள் எதுவும் உருவாக்கவில்லை </string>
+  <string name="start_creating_btn">உருவாக்கத்  தொடங்கு </string>
+  <string name="leaderboard_text">முன்னிலை பட்டியல்  பார்க்க கீழே க்ளிக் செய்யுங்கள் </string>
+  <string name="leaderboard_btn">View Leaderboard</string>
+  <string name="total_blog_view">Total Blog views</string>
+  <string name="total_vlog_view">Total Vlog view</string>
+  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard_blogs">BLOGS</string>
+  <string name="leaderboard_vlogs">VLOG</string>
+  <string name="webview_hack_text">உங்கள் படைப்புக்களின் தன்னிச்சையான பார்வையாளர்கள் அதிகரிக்க சில குறிப்புகள்</string>
+  <string name="webview_term_text">விதிமுறைகள் மற்றும் நிபந்தனைகள்</string>
+  <string name="earning_calculator">Earning Calculator</string>
+  <string name="click_here_btn">Click to view leaderboard</string>
+  <string name="checkout_growth_hack">Checkout the growth hacks</string>
+  <string name="blogger_gold_about_text">மாம்ஸ்ப்ரெஸ்ஸோ பத்தாவது ஆண்டில் அடியெடுத்து வைக்கிறது! இந்த சிறப்பான தருணத்தை மேலும் சிறப்பாக்குவதற்கு நாங்கள் பெரிய திட்டங்களை வகுத்திருக்கிறோம். என்னவென்று தெரிந்து கொள்ள ஆவலாக இருக்கிறதா? எங்களது இந்த பத்தாவது பிறந்த நாள் கொண்டாட்டத்தை முன்னிட்டு, நீங்கள் பரிசாக பெற 5 லட்ச ரூபாய் காத்துக் கொண்டிருக்கிறது, மற்றும் நீங்கள் அனைவருமே இந்த பரிசைப் பெற தகுதியானவர்கள்!</string>
+  <string name="webview_know_more">மேலும் அறிய</string>
+  <string name="leaderboard_faq">அடிக்கடி கேட்கப்படும் கேள்விகள்</string>
+  <string name="click_below_btn">முன்னிலை பட்டியல்  பார்க்க கீழே க்ளிக் செய்யுங்கள் </string>
+  <string name="rank_up">ஆஹா! நேற்றைவிட நீங்கள் %1$d இடங்கள் முன்னேறி இருக்கிறீர்கள்</string>
+  <string name="rank_down">நீங்கள் %1$d இடங்கள் பின்னே சென்றுவிட்டீர்கள். உங்கள் இடத்தை முன்னேற்ற படைப்புகளை உருவாக்கி பகிருங்கள்</string>
+  <string name="rank_same">உங்கள் இடத்தை முன்னேற்ற படைப்புகளை உருவாக்கி பகிருங்கள்</string>
+  <string name="lang_sel_express_yourself">உங்களின் உணர்ச்சிகளை 10 மொழிகளில்  வெளிப்படுத்தலாம்</string>
+  <string name="select_language">மொழியை தேர்ந்தெடு</string>
+  <string name="login_or_sign_up">உள்நுழை (அ) பதிவு செய்</string>
+  <string name="login_subheading">படைப்பு உருவாக்க, படிக்க, பணம் ஈட்ட மற்றும் 32.மி அம்மாக்கள் நிறைந்த ‌தளத்தில் இணைய </string>
+  <string name="welcome_user">வணக்கம் %1$s,</string>
+  <string name="home_onboarding_consume">5.ல வலைப்பதிவுகள் மற்றும் கதைகளை படிக்கலாம் (அ ) வீடியோக்களை காணலாம்.</string>
+  <string name="home_onboarding_create">பதிவுகள், கதைகள் அல்லது காணொளிகள் மூலமாக உங்கள் எண்ணங்களை  வெளிப்படுத்தலாம்</string>
+  <string name="home_onboarding_mymoney">MyMoney பிரச்சாரத்தில் பங்கேற்று பணம் ஈட்டுங்கள்</string>
+  <string name="home_onboarding_groups">ஆதரவுக்க குழுக்கள் வாயிலாக ஆதரவு பெறலாம் அல்லது ஆதரவு அளிக்கலாம் </string>
+  <string name="all_create">உருவாக்க </string>
+  <string name="all_read">படிக்க </string>
+  <string name="all_earn">ஈட்ட </string>
+  <string name="all_join">இணைய </string>
+  <string name="explore_self">நானே  ஆராய்ந்து கொள்கிறேன்</string>
+  <string name="home_onboarding_title">உங்களின் பயணத்தை எவ்வாறு தொடங்க விரும்புகிறீர்கள்?</string>
 </resources>
